[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "pyfiche"
version = "0.0.1"

authors = [
  { name="Private.coffee Team", email="support@private.coffee" },
]

description = "Pastebin for command-line use"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"

packages = [
    "src/gptbot"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    ]

[project.optional-dependencies]
dev = [
  "black",
  "hatchling",
  "twine",
  "build",
]

[project.urls]
"Homepage" = "https://kumig.it/PrivateCoffee/pyfiche"
"Bug Tracker" = "https://kumig.it/PrivateCoffee/pyfiche/issues"

[project.scripts]
pyfiche-server = "pyfiche.fiche_server:main"
pyfiche-recup = "pyfiche.recup_server:main"
pyfiche-lines = "pyfiche.lines_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfiche"]